--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <p>I am equipped with both creative flair and analytical prowess. I am eager to embark on a career journey within the dynamic and competitive landscape of technology, where I aspire to contribute as a key player in innovative and challenging
                     environments. With a commitment to excellence and a passion for leveraging cutting-edge solutions, I am poised to make impactful contributions while continuously growing and thriving in this ever-evolving field
                 </p>
-                <a href="Resume.pdf" class="cta">Download Resume</a>
+                <a href="Resume.pdf" class="cta" download>Download Resume</a>
             </div>
         </div>
     </section>
