--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <p>I developed a comprehensive web application for the Karnataka Forest Department using JDBC, J2EE, JSP, HTML, CSS, JavaScript, and MySQL. The project enables users to register for mountain trekking, search details using registration IDs, and cancel registrations seamlessly.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="img-1.png" alt="img">
                     </div>
                 </div>
             </div>
