--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <!-- <h2>Your Complete Web Solution</h2> -->
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="https://github.com/KotteJagan"><img src="https://img.icons8.com/?size=100&id=118553&format=png&color=000000" /></a>
+                    <a href="https://bit.ly/jagangithub"><img src="https://img.icons8.com/?size=100&id=118553&format=png&color=000000" /></a>
                 </div>
                 <div class="social-item">
                     <a href="https://www.instagram.com/jagan_royals?igsh=ZGUzMzM3NWJiOQ=="><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
