--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img">
-                    <img src="IMG_1429.jpg" alt="img">
+                    <img src="jk.jpg" alt="img">
                 </div>
             </div>
             <div class="col-right">
