--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                  <div class="project-item">
                     <div class="project-info"> 
                  <h1>Project 3</h1>
-                        <h2>Trek Registration</h2>
-                        <p>I developed a comprehensive web application for the Karnataka Forest Department using JDBC, J2EE, JSP, HTML, CSS, JavaScript, and MySQL. The project enables users to register for mountain trekking, search details using registration IDs, and cancel registrations seamlessly.</p>
+                       <a href="https://kottejagan.github.io/Trekking-Project/">
+ <h2>Trek Registration</h2>
+                        <p>I developed a comprehensive web application for the Karnataka Forest Department using JDBC, J2EE, JSP, HTML, CSS, JavaScript, and MySQL. The project enables users to register for mountain trekking, search details using registration IDs, and cancel registrations seamlessly.</p> </a>
                     </div>
                     <div class="project-img">
                         <img src="img-1.png" alt="img">
