--- a/index.html
+++ b/index.html
@@ -133,6 +133,17 @@
                         <img src="img-1.png" alt="img">
                     </div>
                 </div>
+                 <div class="project-item">
+                    <div class="project-info"> 
+                 <h1>Project 4</h1>
+                       <a href="https://kottejagan.github.io/Banking-Project/">
+ <h2>Banking Project</h2>
+                        <p>Developed a full-featured banking application using Java, JDBC, JSP, and Tomcat server. The project includes user registration, secure login, and various functionalities such as account creation, withdrawal, deposit, money transfer, and transaction history retrieval.</p> </a>
+                    </div>
+                    <div class="project-img">
+                        <img src="img-1.png" alt="img">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
